(os) Avoid blurry text in webkit when containers fall on subpixels

--- a/www/css/os/hud/pop-menu.css
+++ b/www/css/os/hud/pop-menu.css
@@ -89,8 +89,6 @@
 .kate-hud-dialog-pop-menu-action .kate-ui-button.focus {
   background: var(--focus-background);
   color: var(--color-text-inverted);
-  position: relative;
-  z-index: 1;
 }
 
 .kate-hud-dialog-action-menu-frame .kate-hud-dialog-text {
